# vewdtab

./: LICENSE  README.md  nodes.py  pyproject.toml
web/: sidebar.js  splat-viewer.html
web/js/: gsplat-bundle.js
